# omnigent

./: .crabbox.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORK_E2E_SMOKE.md  MYSQL_COMPAT.md  Makefile  NOTICE  README.md  README.zh-CN.md  README_zh.md  RELEASING.md  SECURITY.md  ci-external-contributors-proposal.md  dummy-test-611.txt  openapi.json  pyproject.toml  setup.py  uv.toml
.github/: CODEOWNERS  ISSUE_ASSIGNEES  MAINTAINER  copilot-instructions.md  pull_request_template.md
ap-web/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
deploy/: AUTOASSIGN_TEST.md  README.md
designs/: ARCHITECTURE.md  CLI_SUBAGENT_STATUSBAR.md  CUJ-ANALYSIS.md  GTM_CONTROL_PLANE.md  OBSERVABILITY.md  PAUSE_RESUME_DISCONNECT_TOLERANCE.md  PHASE1_SERVER_AUTHORITATIVE_TURNS.md  SANDBOX_CREDENTIAL_PROXY.md  STABILITY-CUJ-ANSWERS.md  ci-external-contributors-proposal.md  contributor-review-merge-proposal.md  harness-modular-registry-proposal.md  harness-plugin-interface.md  issue-triage-proposal.md  nightly-docs-sync-proposal.md  opencode-native-gaps.md
docs/: AGENT_YAML_SPEC.md  ARCHITECTURE.md  CRABBOX.md  KIMI_FOLLOWUPS.md  OPENCODE_FOLLOWUPS.md  POLICIES.md  QWEN_FOLLOWUPS.md  SERVER_VERSION_COMPAT_CI.md  antigravity-native-rpc-core-design.md  databricks.md  gate-smoke-test.md  goose-native-gap-plan.md  harness-bench-design.md  headless_api_run_guide.md  kiro-native-elicitation.md  security_gate_demo.py
examples/: opencode_hello.yaml  qwen_hello.yaml
omnigent/: _native_forwarder_health.py  _native_post_delivery.py  _platform.py  _wrapper_labels.py  agent_manager.py  antigravity_native.py  antigravity_native_audit.py  antigravity_native_bridge.py  antigravity_native_forwarder.py  antigravity_native_interactions.py  antigravity_native_launch.py  antigravity_native_reader.py  antigravity_native_rpc.py  antigravity_native_steps.py  chat.py  claude_native.py  claude_native_bridge.py  claude_native_forwarder.py  claude_native_hook.py  cli.py  cli_sandbox.py  cline_native.py  cline_native_bridge.py  codex_native.py  codex_native_app_server.py  codex_native_bridge.py  codex_native_forwarder.py  codex_ws_transport.py  cursor_cloud_repo.py  cursor_native.py  cursor_native_bridge.py  cursor_native_forwarder.py  cursor_native_permissions.py  cursor_native_status.py  cursor_native_usage.py  goose_native.py  goose_native_audit.py  goose_native_bridge.py  goose_native_forwarder.py  (+40 more)
tests/codex_parity/sidecar/: Cargo.toml
tests/codex_parity/sidecar/src/: main.rs
(+2245 files in other folders)
