[package]
name = "codex-parity-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
core_test_support = { path = "../../../third_party/codex/codex-rs/core/tests/common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread", "time"] }

# `core_test_support` is normally built inside the upstream Codex workspace.
# That workspace patches websocket crates to OpenAI forks that expose the
# `proxy` feature expected by Codex's networking stack. Because this sidecar is
# an external crate that depends on Codex test support by path, it does not
# inherit the upstream workspace patches automatically. Keep these patches in
# sync with `third_party/codex/codex-rs/Cargo.toml`; without them Cargo resolves
# crates.io `tokio-tungstenite`, which does not provide the requested feature.
[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

# Some Codex crates reference the tungstenite fork through the SSH git URL.
# Patch that source as well so every dependency edge resolves to the same
# HTTPS-pinned revision in this standalone sidecar build.
[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
